--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300&display=swap"
         rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="vendors/js/jquery.waypoints.min.js"></script>
+    <script src="https://unpkg.com/ionicons@5.2.1/dist/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
+    <script src="resources/js/script.js"></script>
+    <script>
+        $(function () {
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
+        });
+    </script>
     <title>AidaNails</title>
 </head>
 
@@ -20,24 +33,8 @@
         </div>
 
     </section>
-    <header>
-        <nav>
-            <div class="row">
-                <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
-                <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
 
-                <ul class="main-nav js--menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="prices.html">Prices</a></li>
-                    <li><a href="specialoffers.html">Special Offers</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="contactus.html">Contact Us</a></li>
-                </ul>
-                <button class="hamburger">&#9776;</button>
-                <button class="cross">&#735;</button>
-            </div>
-        </nav>
-    </header>
+    <div id="header"></div>
 
     <div class="row gallery">
         <figure class="gallery__item gallery__item--1">
