added added a new humbarger menu, needs refactory

--- a/aftercare.html
+++ b/aftercare.html
@@ -163,49 +163,7 @@
         </div>
     </section>
 
-    <footer>
-        <div class="section-footer">
-            <div class="col span-1-of-3">
-                <p>R. Sebastião da Gama No 8B</p>
-                <p>2700-770 - Amadora</p>
-                <p>Portugal</p><br>
-
-                <h3>Opening Times</h3>
-                <p>Segunda as Sextas - Das 09:30 as 19:30</p>
-                <p>Sabado - Das 09:30 as 19:30</p>
-                <p>Domingo - Fechado</p>
-            </div>
-            <div class="col span-1-of-3">
-                <p>Email: aidinha2001@gmail.com</p>
-                <p>Telefone: +351 963 254 009</p><br>
-                <a href="resources/views/aftercare.html">Ofertas especiais</a><br><br>
-                <a href="aftercare.html">Aftercare Advice</a>
-            </div>
-            <div class="col span-1-of-3">
-                <ul class="social-links">
-                    <li><a href="https://www.facebook.com/aidanails14">
-                            <ion-icon name="logo-facebook" class="logo-facebook"></ion-icon>
-                        </a></li>
-                    <li><a href="#">
-                            <ion-icon name="logo-twitter" class="logo-twitter"></ion-icon>
-                        </a></li>
-                    <li><a href="#">
-                            <ion-icon name="logo-google" class="logo-google"></ion-icon>
-                        </a></li>
-                    <li><a href="#">
-                            <ion-icon name="logo-instagram" class="logo-instagram"></ion-icon>
-                        </a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-    <script src="https://unpkg.com/ionicons@5.2.1/dist/ionicons.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="vendors/js/jquery.waypoints.min.js"></script>
-    <script src="resources/js/script.js"></script>
+    <div id="footer"></div>
 </body>
 
 </html>
