changed the text in between the gallery images

--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
         <div class="col span-1-of-3">
             <p>Email: aidinha2001@gmail.com</p>
             <p>Telefone: +351 963 254 009</p><br>
-            <a href="resources/views/aftercare.html">Ofertas especiais</a><br><br>
+            <a href="specialoffers.html">Ofertas especiais</a><br><br>
             <a href="aftercare.html">Aftercare Advice</a>
         </div>
         <div class="col span-1-of-3">
