--- a/gallery.html
+++ b/gallery.html
@@ -28,13 +28,8 @@
 </head>
 
 <body>
-    <section class="section-testimonials">
-        <div class="row">
-            <div class="x-margin-top">
-                <h2>Our Customers can't live without us</h2>
-            </div>
-        </div>
-
+    <section class="section-details">
+        <p>Telefone: +351 963 254 009</p>
     </section>
 
     <!-- main navigation -->
