--- a/index.html
+++ b/index.html
@@ -145,11 +145,7 @@
     </section>
 
     <section class="section-details">
-        <div class="row">
-            <div class="x-margin-top">
-                <h2>Our Customers can't live without us</h2>
-            </div>
-        </div>
+        <p>Telefone: +351 963 254 009</p>
     </section>
 
     <section class="section-meals">
@@ -199,153 +195,46 @@
         </ul>
     </section>
 
-    <section class="section-testimonials">
-        <div class="row">
-            <div class="x-margin-top">
-                <h2>Our Customers can't live without us</h2>
-            </div>
-        </div>
-
+    <section class="section-details">
+        <p>Telefone: +351 963 254 009</p>
     </section>
 
-    <section class="section-cities" id="cities">
+    <section class="section-features js--section-features" id="features">
         <div class="row">
-            <div class="x-margin-top">
-                <h2>Promocao do Mes</h2>
-            </div>
+            <h2>Promocao do Mes</h2>
+            <p class="long-copy">
+                Mime-se aproveitando uma das nossas ofertas;
+            </p>
         </div>
 
-        <div class="row x-padding-bottom">
-            <div class="col span-1-of-4 box">
-                <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
-                <h3>Lisbon</h3>
-                <div class="city-feature">
-                    <ion-icon name="person" class="icon-small"></ion-icon>
-                    1600+ happy eaters
-                </div>
-                <div class="city-feature">
-                    <ion-icon name="star" class="icon-small"></ion-icon>
-                    75+ Top Chefs
-                </div>
-                <div class="city-feature">
-                    <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
-                    <a href="#">@omnifood_lisbon</a>
-                </div>
-            </div>
-            <div class="col span-1-of-4 box">
-                <img src="resources/img/san-francisco.jpg" alt="San Francisco">
-                <h3>San Francisco</h3>
-                <div class="city-feature">
-                    <ion-icon name="person" class="icon-small"></ion-icon>
-                    2300+ happy eaters
-                </div>
-                <div class="city-feature">
-                    <ion-icon name="star" class="icon-small"></ion-icon>
-                    60+ Top Chefs
-                </div>
-                <div class="city-feature">
-                    <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
-                    <a href="#">@omnifood_sf</a>
-                </div>
-            </div>
-            <div class="col span-1-of-4 box">
-                <img src="resources/img/berlin.jpg" alt="Berlin">
-                <h3>Berlin</h3>
-                <div class="city-feature">
-                    <ion-icon name="person" class="icon-small"></ion-icon>
-                    700+ happy eaters
-                </div>
-                <div class="city-feature">
-                    <ion-icon name="star" class="icon-small"></ion-icon>
-                    25+ Top Chefs
-                </div>
-                <div class="city-feature">
-                    <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
-                    <a href="#">@omnifood_berlin</a>
-                </div>
-            </div>
-            <div class="col span-1-of-4 box">
-                <img src="resources/img/london.jpg" alt="London">
-                <h3>London</h3>
-                <div class="city-feature">
-                    <ion-icon name="person" class="icon-small"></ion-icon>
-                    2600+ happy eaters
-                </div>
-                <div class="city-feature">
-                    <ion-icon name="star" class="icon-small"></ion-icon>
-                    50+ Top Chefs
-                </div>
-                <div class="city-feature">
-                    <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
-                    <a href="#">@omnifood_london</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="section-form">
         <div class="row">
-            <div class="x-margin-top">
-                <h2>We're happy to hear from you</h2>
+            <div class="col span-1-of-2 box">
+                <img src="resources/img/nail-ext.png" alt="frontPicture">
+                <h3>Ofertas para estudantes de segunda-feira a quinta-feira para estudantes em tempo integral</h3>
+                <p>
+                    10% de desconto em todos os tratamentos com carteira de estudante.
+                    * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
+                </p>
+                <h3>Oferta de extensão de unhas em acrílico e dedos em gel</h3>
+                <p>
+                    Reserve um conjunto de extensões ou preenchimentos de acrílico e adicione Gel por £30 euros
+                    * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
+                </p>
             </div>
-        </div>
-
-        <div class="row x-padding-bottom">
-            <form method="post" action="#" class="contact-form">
-                <div class="row">
-                    <div class="col span-1-of-3">
-                        <label for="name">Name</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                        <input type="text" name="name" id="name" placeholder="Your name" required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col span-1-of-3">
-                        <label for="email">Email</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                        <input type="email" name="email" id="email" placeholder="Your email" required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col span-1-of-3">
-                        <label for="find-us">How did you find us?</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                        <select name="find-us" id="find-us">
-                            <option value="friends" selected>Friends</option>
-                            <option value="search">Search Engine</option>
-                            <option value="ad">Advertisement</option>
-                            <option value="other">Other</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col span-1-of-3">
-                        <label>Newsletter?</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                        <input type="checkbox" name="news" id="news" checked> Yes. please
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col span-1-of-3">
-                        <label>Drop us a line</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                        <textarea name="message" placeholder="Your message"></textarea>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col span-1-of-3">
-                        <label>&nbsp;</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                        <input type="submit" value="Send it!">
-                    </div>
-                </div>
-            </form>
+            <div class="col span-1-of-2 box">
+                <img src="resources/img/infill.png" alt="frontPicture">
+                <h3>Tratamento completo de mãos e pez em gel ou acrilico</h3>
+                <p>
+                    Reserve um conjunto de mãos e pez em gel por £50 euros
+                    * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
+                </p>
+                <h3>Unhas de acrílico para estudantes</h3>
+                <p>
+                    Conjunto completo de acrílicos com Nail Art. As mãos não devem ter acessórios / polimento por £30
+                    euros
+                    * Aplica-se apenas a alunos em tempo integral
+                </p>
+            </div>
         </div>
     </section>
 
