--- a/specialoffers.html
+++ b/specialoffers.html
@@ -28,12 +28,8 @@
 </head>
 
 <body>
-    <section class="section-testimonials">
-        <div class="row">
-            <div class="x-margin-top">
-                <h2>Our Customers can't live without us</h2>
-            </div>
-        </div>
+    <section class="section-details">
+        <p>Telefone: +351 963 254 009</p>
     </section>
 
     <!-- main navigation -->
@@ -70,13 +66,6 @@
             <i class="fas fa-bars"></i>
         </a>
     </div>
-
-    <section class="section-header">
-        <img src="resources/img/picture19.jpg" alt="frontPicture">
-        <div class="hero-text-box">
-            <a class="btn btn-full js--scroll-to-plans" href="#">Marque uma consulta</a>
-        </div>
-    </section>
 
     <section class="section-features js--section-features" id="features">
         <div class="row">
@@ -117,12 +106,8 @@
         </div>
     </section>
 
-    <section class="section-testimonials">
-        <div class="row">
-            <div class="x-margin-top">
-                <h2><a class="btn btn-full" href="contactus.html">Marque uma consulta</a></h2>
-            </div>
-        </div>
+    <section class="section-details">
+        <p>Telefone: +351 963 254 009</p>
     </section>
 
     <section class="section-meals">
@@ -172,12 +157,8 @@
         </ul>
     </section>
 
-    <section class="section-testimonials">
-        <div class="row">
-            <div class="x-margin-top">
-                <h2><a class="btn btn-full" href="contactus.html">Marque uma consulta</a></h2>
-            </div>
-        </div>
+    <section class="section-details">
+        <p>Telefone: +351 963 254 009</p>
     </section>
 
     <div id="footer"></div>
