reduced the margin of the logo, centered the menus items in the humburger

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     <header>
         <div class="row clearfix">
             <img src="resources/img/logo-main.png" alt="Omnifood logo" class="logo">
-            <img src="resources/img/logo-main.png" alt="Omnifood logo" class="logo-black">
 
             <ul class="main-nav js--menu">
                 <li><a href="index.html">Home</a></li>
@@ -50,8 +49,7 @@
 
     <!-- Mobile navigation -->
     <div class="row topnav">
-        <img src="resources/img/logo-main.png" alt="Omnifood logo" class="logo">
-        <img src="resources/img/logo-main.png" alt="Omnifood logo" class="logo-black">
+        <img src="resources/img/logo-main.png" alt="Omnifood logo" class="logo-mobile">
 
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
