removed some unused css cmds in styles file

--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
 
     <section class="section-header">
         <img src="resources/img/picture19.jpg" alt="frontPicture">
-        <div class="hero-text-box">
-            <a class="btn btn-full js--scroll-to-plans" href="#">Marque uma consulta</a>
-        </div>
+        <button class="btn">Marque uma consulta</button>
     </section>
 
     <section class="section-features js--section-features" id="features">
