--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
     <section class="section-details">
-        <p>Telefone: +351 963 254 009</p>
+        <p><i class="fas fa-phone"></i> +351 963 254 009</p>
     </section>
 
     <!-- main navigation -->
@@ -82,66 +82,58 @@
                 desejada e o que você necessita na hora. Deixe-nos cuidar do teu visual, Obrigada pela Opçao.
             </p>
         </div>
-
-        <h2>Nossos tratamentos</h2>
-        <p class="long-copy">
-            Só usamos produtos de qualidade para reduzir a poeira e odores fortes. Usamos produtos Semilac com cores
-            de
-            gel UV híbrido altamente pigmentadas e acabamentos de unha criativos.
-            Então relaxe - converse, pegue um conjunto de unhas bonito e delicie-se com um copo de espumante ou um
-            café.
-        </p>
-
+        <div class="row">
+            <h2>Nossos tratamentos</h2>
+            <p class="long-copy">
+                Só usamos produtos de qualidade para reduzir a poeira e odores fortes. Usamos produtos Semilac com cores
+                de gel UV híbrido altamente pigmentadas e acabamentos de unha criativos.
+                Então relaxe - converse, pegue um conjunto de unhas bonito e delicie-se com um copo de espumante ou um
+                café.
+            </p>
+        </div>
         <div class="row">
             <div class="col span-1-of-4 box">
                 <img src="resources/img/nail-ext.png" alt="frontPicture">
-                <h3>Extensões de gel ou acrílico</h3>
-                <p>
+                <h2>Extensões de gel ou acrílico</h2>
+                <p class="long-copy">
                     As extensões de gel ou acrílico são projetadas para estender o comprimento da unha natural
-                    usando um
-                    gel especial de construção, pó acrílico para esculpir ou usar pontas de plástico. Inclui:
-                    tratamento
-                    de unhas e cutículas, extensão da unha, escolha da cor do gel e acabamento.
+                    usando um gel especial de construção, pó acrílico para esculpir ou usar pontas de plástico. Inclui:
+                    tratamento de unhas e cutículas, extensão da unha, escolha da cor do gel e acabamento.
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <img src="resources/img/infill.png" alt="frontPicture">
-                <h3>Preenchimento</h3>
-                <p>
+                <h2>Preenchimento</h2>
+                <p class="long-copy">
                     Lixaremos a linha de enchimento / regeneração e reaplicaremos o gel / acrílico para que a unha
-                    fique
-                    como nova e aplicaremos o esmalte de gel de sua escolha.
+                    fique como nova e aplicaremos o esmalte de gel de sua escolha.
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <img src="resources/img/pedicure.png" alt="frontPicture">
-                <h3>Uma manicure luxuosa</h3>
-                <p>
+                <h2>Uma manicure luxuosa</h2>
+                <p class="long-copy">
                     Uma mão longa embebe e esfolia a pele para retirar a pele morta, amacia e arruma as cutículas,
-                    lixa
-                    e molda as unhas, massageia as mãos e aplique esmalte em gel seguido de óleo de cutícula e loção
-                    hidratante.
+                    lixa e molda as unhas, massageia as mãos e aplique esmalte em gel seguido de óleo de cutícula e
+                    loção hidratante.
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <img src="resources/img/manicure.png" alt="frontPicture">
-                <h3>Pedicure de Rainha</h3>
-                <p>
+                <h2>Pedicure de Rainha</h2>
+                <p class="long-copy">
                     Uma nova pedicure de luxo em nossas tigelas de cobre. Usar sais do Himalaia para embeber os pés
-                    com
-                    uma esfoliação de sal marinho e raspar o pé para remover a pele dura, antes de envolver o pé em
-                    uma
-                    máscara de hortelã-pimenta aquecida profundamente hidratante e finalizar com um óleo de massagem
+                    com uma esfoliação de sal marinho e raspar o pé para remover a pele dura, antes de envolver o pé em
+                    uma máscara de hortelã-pimenta aquecida profundamente hidratante e finalizar com um óleo de massagem
                     para pés e pernas. Maravilhosamente relaxante e hidratante. Seguido pela sua escolha de polonês
-                    em
-                    gel.
+                    em gel.
                 </p>
             </div>
         </div>
     </section>
 
     <section class="section-details">
-        <p>Telefone: +351 963 254 009</p>
+        <p><i class="fas fa-phone"></i> +351 963 254 009</p>
     </section>
 
     <section class="section-meals">
@@ -191,10 +183,6 @@
         </ul>
     </section>
 
-    <section class="section-details">
-        <p>Telefone: +351 963 254 009</p>
-    </section>
-
     <section class="section-features js--section-features" id="features">
         <div class="row">
             <h2>Promocao do Mes</h2>
@@ -206,12 +194,12 @@
         <div class="row">
             <div class="col span-1-of-2 box">
                 <img src="resources/img/nail-ext.png" alt="frontPicture">
-                <h3>Ofertas para estudantes de segunda-feira a quinta-feira para estudantes em tempo integral</h3>
-                <p>
+                <h2>Ofertas para estudantes de segunda-feira a quinta-feira para estudantes em tempo integral</h2>
+                <p class="long-copy">
                     10% de desconto em todos os tratamentos com carteira de estudante.
                     * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
                 </p>
-                <h3>Oferta de extensão de unhas em acrílico e dedos em gel</h3>
+                <h2>Oferta de extensão de unhas em acrílico e dedos em gel</h2>
                 <p>
                     Reserve um conjunto de extensões ou preenchimentos de acrílico e adicione Gel por £30 euros
                     * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
@@ -219,13 +207,13 @@
             </div>
             <div class="col span-1-of-2 box">
                 <img src="resources/img/infill.png" alt="frontPicture">
-                <h3>Tratamento completo de mãos e pez em gel ou acrilico</h3>
-                <p>
+                <h2>Tratamento completo de mãos e pez em gel ou acrilico</h2>
+                <p class="long-copy">
                     Reserve um conjunto de mãos e pez em gel por £50 euros
                     * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
                 </p>
-                <h3>Unhas de acrílico para estudantes</h3>
-                <p>
+                <h2>Unhas de acrílico para estudantes</h2>
+                <p class="long-copy">
                     Conjunto completo de acrílicos com Nail Art. As mãos não devem ter acessórios / polimento por £30
                     euros
                     * Aplica-se apenas a alunos em tempo integral
