added new img, worked in css for mobile up to 620px

--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
             </p>
         </div>
         <div class="row">
-            <div class="col span-1-of-4 box">
-                <img src="resources/img/nail-ext.png" alt="frontPicture">
+            <div class="col span-1-of-4">
+                <div class="svg-img">
+                    <img src="resources/img/nailsext.jpg" alt="frontPicture">
+                </div>
                 <h2>Extensões de gel ou acrílico</h2>
                 <p class="long-copy">
                     As extensões de gel ou acrílico são projetadas para estender o comprimento da unha natural
@@ -101,35 +103,46 @@
                     tratamento de unhas e cutículas, extensão da unha, escolha da cor do gel e acabamento.
                 </p>
             </div>
-            <div class="col span-1-of-4 box">
-                <img src="resources/img/infill.png" alt="frontPicture">
-                <h2>Preenchimento</h2>
-                <p class="long-copy">
-                    Lixaremos a linha de enchimento / regeneração e reaplicaremos o gel / acrílico para que a unha
-                    fique como nova e aplicaremos o esmalte de gel de sua escolha.
-                </p>
+            <div class="col span-1-of-4">
+                <div class="svg-img">
+                    <img src="resources/img/greennails.jpg" alt="frontPicture">
+                    <h2>Preenchimento</h2>
+                    <p class="long-copy">
+                        Lixaremos a linha de enchimento / regeneração e reaplicaremos o gel / acrílico para que a unha
+                        fique como nova e aplicaremos o esmalte de gel de sua escolha.
+                    </p>
+                </div>
             </div>
-            <div class="col span-1-of-4 box">
-                <img src="resources/img/pedicure.png" alt="frontPicture">
-                <h2>Uma manicure luxuosa</h2>
-                <p class="long-copy">
-                    Uma mão longa embebe e esfolia a pele para retirar a pele morta, amacia e arruma as cutículas,
-                    lixa e molda as unhas, massageia as mãos e aplique esmalte em gel seguido de óleo de cutícula e
-                    loção hidratante.
-                </p>
+            <div class="col span-1-of-4">
+                <div class="svg-img">
+                    <img src="resources/img/luxurynails.jpg" alt="frontPicture">
+                    <h2>Uma manicure luxuosa</h2>
+                    <p class="long-copy">
+                        Uma mão longa embebe e esfolia a pele para retirar a pele morta, amacia e arruma as
+                        cutículas,
+                        lixa e molda as unhas, massageia as mãos e aplique esmalte em gel seguido de óleo de
+                        cutícula e
+                        loção hidratante.
+                    </p>
+                </div>
             </div>
-            <div class="col span-1-of-4 box">
-                <img src="resources/img/manicure.png" alt="frontPicture">
-                <h2>Pedicure de Rainha</h2>
-                <p class="long-copy">
-                    Uma nova pedicure de luxo em nossas tigelas de cobre. Usar sais do Himalaia para embeber os pés
-                    com uma esfoliação de sal marinho e raspar o pé para remover a pele dura, antes de envolver o pé em
-                    uma máscara de hortelã-pimenta aquecida profundamente hidratante e finalizar com um óleo de massagem
-                    para pés e pernas. Maravilhosamente relaxante e hidratante. Seguido pela sua escolha de polonês
-                    em gel.
-                </p>
+            <div class="col span-1-of-4">
+                <div class="svg-img">
+                    <img src="resources/img/pedicuree.jpg" alt="frontPicture">
+                    <h2>Pedicure de Rainha</h2>
+                    <p class="long-copy">
+                        Uma nova pedicure de luxo em nossas tigelas de cobre. Usar sais do Himalaia para embeber
+                        os pés
+                        com uma esfoliação de sal marinho e raspar o pé para remover a pele dura, antes de
+                        envolver o pé em
+                        uma máscara de hortelã-pimenta aquecida profundamente hidratante e finalizar com um óleo
+                        de massagem
+                        para pés e pernas. Maravilhosamente relaxante e hidratante. Seguido pela sua escolha de
+                        polonês
+                        em gel.
+                    </p>
+                </div>
             </div>
-        </div>
     </section>
 
     <section class="section-details">
@@ -185,39 +198,42 @@
 
     <section class="section-features js--section-features" id="features">
         <div class="row">
-            <h2>Promocao do Mes</h2>
+            <h2><strong>Promocao do Mes</strong></h2>
             <p class="long-copy">
-                Mime-se aproveitando uma das nossas ofertas;
+                Mime-se aproveitando uma das nossas ofertas
             </p>
         </div>
 
         <div class="row">
-            <div class="col span-1-of-2 box">
-                <img src="resources/img/nail-ext.png" alt="frontPicture">
-                <h2>Ofertas para estudantes de segunda-feira a quinta-feira para estudantes em tempo integral</h2>
-                <p class="long-copy">
-                    10% de desconto em todos os tratamentos com carteira de estudante.
-                    * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
-                </p>
-                <h2>Oferta de extensão de unhas em acrílico e dedos em gel</h2>
-                <p>
-                    Reserve um conjunto de extensões ou preenchimentos de acrílico e adicione Gel por £30 euros
-                    * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
-                </p>
+            <div class="col span-1-of-2">
+                <div class="svg-img">
+                    <img src="resources/img/luxurynails.jpg" alt="frontPicture">
+                    <h3>Ofertas para estudantes de segunda-feira a quinta-feira para estudantes em tempo integral</h3>
+                    <p class="long-copy">
+                        10% de desconto em todos os tratamentos com carteira de estudante.
+                    </p>
+                    <h3>Oferta de extensão de unhas em acrílico e dedos em gel</h3>
+                    <p>
+                        Reserve um conjunto de extensões ou preenchimentos de acrílico e adicione Gel por £30 euros
+                    </p>
+                </div>
             </div>
-            <div class="col span-1-of-2 box">
-                <img src="resources/img/infill.png" alt="frontPicture">
-                <h2>Tratamento completo de mãos e pez em gel ou acrilico</h2>
-                <p class="long-copy">
-                    Reserve um conjunto de mãos e pez em gel por £50 euros
-                    * nenhuma outra oferta de desconto pode ser usada ao mesmo tempo que esta oferta
-                </p>
-                <h2>Unhas de acrílico para estudantes</h2>
-                <p class="long-copy">
-                    Conjunto completo de acrílicos com Nail Art. As mãos não devem ter acessórios / polimento por £30
-                    euros
-                    * Aplica-se apenas a alunos em tempo integral
-                </p>
+
+            <div class="col span-1-of-2">
+                <div class="svg-img">
+                    <img src="resources/img/luxurynails.jpg" alt="frontPicture">
+                    <h3>Tratamento completo de mãos e pez em gel ou acrilico</h3>
+                    <p class="long-copy">
+                        Reserve um conjunto de mãos e pez em gel por £50 euros
+                    </p>
+                    <h3>Unhas de acrílico para estudantes</h3>
+                    <p class="long-copy">
+                        Conjunto completo de acrílicos com Nail Art. As mãos não devem ter acessórios / polimento por
+                        £30
+                        euros
+                        * Aplica-se apenas a alunos em tempo integral
+                    </p>
+                </div>
             </div>
         </div>
     </section>
