copleted the footer for small & large phones

--- a/footer.html
+++ b/footer.html
@@ -1,22 +1,26 @@
 <footer>
-    <div class="section-footer">
-        <div class="col span-1-of-3">
+    <div class="footer-distributed">
+        <div class="footer-left">
+            <h2>Opening Times</h2>
+            <p>Segunda as Sextas - Das 09:30 as 19:30</p>
+            <p>Sabado - Das 09:30 as 19:30</p>
+            <p>Domingo - Fechado</p><br><br>
+
+            <h2>Estamos Localizados:</h2>
             <p>R. Sebastião da Gama No 8B</p>
             <p>2700-770 - Amadora</p>
             <p>Portugal</p><br>
-
-            <h3>Opening Times</h3>
-            <p>Segunda as Sextas - Das 09:30 as 19:30</p>
-            <p>Sabado - Das 09:30 as 19:30</p>
-            <p>Domingo - Fechado</p>
         </div>
-        <div class="col span-1-of-3">
-            <p>Email: aidinha2001@gmail.com</p>
-            <p>Telefone: +351 963 254 009</p><br>
-            <a href="specialoffers.html">Ofertas especiais</a><br><br>
-            <a href="aftercare.html">Aftercare Advice</a>
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:aidinha2001@gmail.com" target="_blank">Email: aidinha2001@gmail.com</a></p><br><br>
+            </div>
+            <p>Telefone: +351 963 254 009</p><br><br>
+            <p><a href="specialoffers.html">Ofertas especiais</a></p><br><br>
+            <p><a href="aftercare.html">Aftercare Advice</a></p>
         </div>
-        <div class="col span-1-of-3">
+        <div class="footer-right">
             <ul class="social-links">
                 <li><a href="https://www.facebook.com/aidanails14">
                         <ion-icon name="logo-facebook" class="logo-facebook"></ion-icon>
