removed unnecessary code, updated the responsive mobile up to 620px

--- a/index.html
+++ b/index.html
@@ -149,47 +149,47 @@
         <p><i class="fas fa-phone"></i> +351 963 254 009</p>
     </section>
 
-    <section class="section-meals">
-        <ul class="meals-showcase clearfix">
+    <section class="section-gallery">
+        <ul class="photos-gallery clearfix">
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/picture76.jpg" alt="eyebrows">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/nails3.jpg" alt="nails3">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/nails4.jpg" alt="nails4">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/picture33.jpg" alt="nails5">
                 </figure>
             </li>
         </ul>
-        <ul class="meals-showcase clearfix">
+        <ul class="photos-gallery clearfix">
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/picture33.jpg" alt="picture33">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/picture34.jpg" alt="Burger with cheddar and bacon">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/picture76.jpg" alt="Healthy baguette with egg and vegetables">
                 </figure>
             </li>
             <li>
-                <figure class="meal-photo">
+                <figure class="gallery-photo">
                     <img src="resources/img/nails4.jpg" alt="Chicken breast steak with vegetables">
                 </figure>
             </li>
@@ -213,7 +213,7 @@
                         10% de desconto em todos os tratamentos com carteira de estudante.
                     </p>
                     <h3>Oferta de extensão de unhas em acrílico e dedos em gel</h3>
-                    <p>
+                    <p class="long-copy">
                         Reserve um conjunto de extensões ou preenchimentos de acrílico e adicione Gel por £30 euros
                     </p>
                 </div>
@@ -229,8 +229,7 @@
                     <h3>Unhas de acrílico para estudantes</h3>
                     <p class="long-copy">
                         Conjunto completo de acrílicos com Nail Art. As mãos não devem ter acessórios / polimento por
-                        £30
-                        euros
+                        £30 euros
                         * Aplica-se apenas a alunos em tempo integral
                     </p>
                 </div>
