--- a/footer.html
+++ b/footer.html
@@ -1,17 +1,20 @@
 <footer>
     <div class="footer-distributed">
-        <div class="footer-left">
+        <div class="f-left-top">
             <h2>Opening Times</h2>
             <p>Segunda as Sextas - Das 09:30 as 19:30</p>
             <p>Sabado - Das 09:30 as 19:30</p>
             <p>Domingo - Fechado</p><br><br>
+        </div>
 
+        <div class="f-left-bottom">
             <h2>Estamos Localizados:</h2>
             <p>R. Sebastião da Gama No 8B</p>
             <p>2700-770 - Amadora</p>
             <p>Portugal</p><br>
         </div>
-        <div class="footer-center">
+
+        <div class="f-center">
             <div>
                 <i class="fa fa-envelope"></i>
                 <p><a href="mailto:aidinha2001@gmail.com" target="_blank">Email: aidinha2001@gmail.com</a></p><br><br>
@@ -20,7 +23,7 @@
             <p><a href="specialoffers.html">Ofertas especiais</a></p><br><br>
             <p><a href="aftercare.html">Aftercare Advice</a></p>
         </div>
-        <div class="footer-right">
+        <div class="f-right">
             <ul class="social-links">
                 <li><a href="https://www.facebook.com/aidanails14">
                         <ion-icon name="logo-facebook" class="logo-facebook"></ion-icon>
