worked in the index page, updated all responsive sizes for mobile devices

--- a/index.html
+++ b/index.html
@@ -145,11 +145,10 @@
             </div>
     </section>
 
-    <section class="section-details">
-        <p><i class="fas fa-phone"></i> +351 963 254 009</p>
-    </section>
-
-    <section class="section-gallery">
+    <section class="row section-gallery">
+        <div class="section-details">
+            <p><i class="fas fa-phone"></i> +351 963 254 009</p>
+        </div>
         <ul class="photos-gallery clearfix">
             <li>
                 <figure class="gallery-photo">
@@ -194,12 +193,13 @@
                 </figure>
             </li>
         </ul>
+        <div class="section-details"></div>
     </section>
 
-    <section class="section-features js--section-features" id="features">
+    <section class="section-promotion js--section-features" id="features">
         <div class="row">
             <h2><strong>Promocao do Mes</strong></h2>
-            <p class="long-copy">
+            <p>
                 Mime-se aproveitando uma das nossas ofertas
             </p>
         </div>
